...
      }
    }
  }

  return (
    <>
      <NavHeader title="Add Credential" />
      <ScrollView
        keyboardShouldPersistTaps="handled"
        keyboardDismissMode="on-drag"
      >
        <View style={styles.container}>
          <Text style={styles.paragraph}>
...
                  colors: {
                    placeholder: theme.color.textSecondary,
                    text: theme.color.textPrimary,
                    primary: theme.color.brightAccent
                  }
                }}
                label="Paste JSON or URL"
                mode="outlined"
                keyboardAppearance={theme.keyboardAppearance}
                onTextInput={() => {}}
                tvParallaxProperties={undefined}
                testID="paste-json-input"
              />
              <Button
                title="Add"
                buttonStyle={[
                  mixins.button,
                  mixins.buttonPrimary,
...
                ]}
                titleStyle={[mixins.buttonTitle]}
                onPress={addFromTextbox}
                disabled={!inputIsValid}
                disabledStyle={styles.actionButtonInactive}
                disabledTitleStyle={styles.actionButtonInactiveTitle}
                testID="add-credential-button"
              />
            </View>
          </View>
        </View>
      </ScrollView>
    </>
...
