...
import { ObjectID } from 'bson'
import { navigationRef } from '../../navigation/navigationRef'

enum StatusIcon {
  Schedule = 'schedule',
  Close = 'close',
  Done = 'done'
}

type ApprovalControlsProps = {
  pendingCredential: PendingCredential
  profileRecordId: ObjectID
  profileName?: string
...
  switch (status) {
    case ApprovalStatus.Pending:
      return (
        <View style={styles.approvalContainer}>
          <ApprovalButton title="Decline" onPress={reject} />
          <View style={styles.buttonSpacer} />
          <ApprovalButton title="Accept" onPress={accept} primary />
        </View>
      )
    case ApprovalStatus.PendingDuplicate:
      return (
        <>
          <Text style={styles.statusTextOutside}>{message}</Text>
...
